# saccade-world-model-exp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  main.py  pyproject.toml
.claude/: settings.container.json  settings.json
.claude/agent-memory/code-quality-reviewer/: MEMORY.md  project_decoder_model.md  project_element_base.md  project_focus_types.md  project_loss_module.md  project_mingru_component.md  project_predictor_model.md  project_types_package.md  project_vit_component.md
.claude/agent-memory/docstring-author/: MEMORY.md  docstring-style.md  models-public-surface.md
.claude/agent-memory/spec-driven-implementer/: MEMORY.md  decoder-mirror-layout.md  exp-types-layout.md  mingru-numerical-core.md  nn-module-call-overload.md  pytest-strict-markers.md
.claude/agent-memory/spec-planner/: MEMORY.md  project_image_value_objects.md  project_module_call_typing.md  project_testing_conventions.md
.claude/agent-memory/spec-test-author/: MEMORY.md  feedback_ruff_isort_missing_module.md  (+13 more)
.claude/agents/: code-quality-reviewer.md  docstring-author.md  spec-driven-implementer.md  spec-planner.md  spec-test-author.md
.claude/plans/: mingru.md
.devcontainer/: .env.example  Dockerfile  compose.yml  devcontainer.json  initialize.sh  post-create.sh
exp/: __init__.py  loss.py
exp/data/: __init__.py  dataloader.py  dataset.py
exp/models/: decoder.py  encoder.py  mingru.py  predictor.py  vit.py
exp/types/: __init__.py  device.py  focus.py  image.py  latent.py  mixin.py  size.py  tensor.py
memory/: MEMORY.md  attrs-tensor-eq.md  docformatter-japanese.md  enum-match-case.md  fail-loud-no-implicit-fallback.md  shadow-builtin-method.md
tests/: conftest.py  helpers.py  test_api_contract.py  test_loss.py  test_smoke.py
tests/data/: test_dataloader.py  test_dataset.py
tests/models/: test_base.py  test_decoder.py  test_encoder.py  test_mingru.py  test_mlp.py  test_norm.py  test_predictor.py  test_vit.py  test_weight.py
tests/types/: test_device.py  test_focus.py  test_image.py  test_latent.py  test_mixin.py  test_size.py  test_tensor.py
(+35 files in other folders)
